add pagination functionality to product list page