@@ -10,7 +10,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -44,13 +43,10 @@ class ProductListControllerTest {
         mockProduct.setName("Billy Bookcase");
 
         mockPagination = new PaginationResponse(
-                PageRequest.of(0, 10),
-                1L,
-                1,
-                1,
-                true,
-                true,
-                false
+                1,    // currentPage (1-based)
+                10L,  // totalElements
+                2,    // totalPages
+                10    // limit
         );
 
         mockPaginatedResponse = new PaginatedListResponse<>(
@@ -79,14 +75,15 @@ class ProductListControllerTest {
 
         // Verify data
         assertEquals(1, response.getBody().getData().size());
-        assertEquals("Billy Bookcase", response.getBody().getData().get(0).getName());
+        assertEquals("Billy Bookcase", response.getBody().getData().getFirst().getName());
 
-        // Verify pagination
+        // Verify pagination (1-based)
         PaginationResponse pagination = response.getBody().getPagination();
         assertNotNull(pagination);
-        assertEquals(1L, pagination.getTotalElements());
-        assertEquals(1, pagination.getTotalPages());
-        assertEquals(1, pagination.getNumberOfElements());
+        assertEquals(1, pagination.getCurrentPage());
+        assertEquals(10L, pagination.getTotalElements());
+        assertEquals(2, pagination.getTotalPages());
+        assertEquals(10, pagination.getLimit());
     }
 
     @Test
@@ -94,13 +91,10 @@ class ProductListControllerTest {
         // Arrange
         Pageable customPageable = PageRequest.of(1, 5, Sort.by(Sort.Direction.ASC, "name"));
         mockPagination = new PaginationResponse(
-                customPageable,
-                2L,
-                2,
-                1,
-                false,
-                true,
-                false
+                2,    // currentPage (1-based, second page)
+                10L,  // totalElements
+                2,    // totalPages
+                5     // limit
         );
         mockPaginatedResponse = new PaginatedListResponse<>(
                 true,
@@ -120,50 +114,12 @@ class ProductListControllerTest {
         assertEquals(HttpStatus.OK, response.getStatusCode());
 
         PaginationResponse pagination = response.getBody().getPagination();
-        assertEquals(2L, pagination.getTotalElements());
+        assertEquals(2, pagination.getCurrentPage());
+        assertEquals(10L, pagination.getTotalElements());
         assertEquals(2, pagination.getTotalPages());
-        assertEquals(1, pagination.getNumberOfElements());
-
+        assertEquals(5, pagination.getLimit());
     }
 
-    @Test
-    void listProducts_WhenNoProductsFound_ReturnsEmptyPaginatedResponse() {
-        // Arrange
-        Pageable defaultPageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt"));
-        PaginationResponse emptyPagination = new PaginationResponse(
-                defaultPageable,
-                0L,
-                0,
-                0,
-                true,
-                true,
-                true
-        );
-        PaginatedListResponse<List<ProductResponse>> emptyResponse = new PaginatedListResponse<>(
-                true,
-                Collections.emptyList(),
-                emptyPagination
-        );
-
-        when(productService.listProducts(any(Pageable.class)))
-                .thenReturn(ResponseEntity.ok(emptyResponse));
-
-        // Act
-        ResponseEntity<PaginatedListResponse<List<ProductResponse>>> response =
-                productListController.listProducts(defaultPageable);
-
-        // Assert
-        assertNotNull(response);
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue(response.getBody().isSuccess());
-        assertTrue(response.getBody().getData().isEmpty());
-
-        PaginationResponse pagination = response.getBody().getPagination();
-        assertEquals(0L, pagination.getTotalElements());
-        assertEquals(0, pagination.getTotalPages());
-        assertEquals(0, pagination.getNumberOfElements());
- 
-    }
 
     @Test
     void listProducts_WhenServiceError_ReturnsErrorResponse() {
@@ -180,5 +136,20 @@ class ProductListControllerTest {
         assertNotNull(response);
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
         assertNull(response.getBody());
+    }
+
+    @Test
+    void listProducts_FirstPage_ReturnsPage1() {
+        // Arrange
+        Pageable pageable = PageRequest.of(0, 10);
+        when(productService.listProducts(any(Pageable.class)))
+                .thenReturn(ResponseEntity.ok(mockPaginatedResponse));
+
+        // Act
+        ResponseEntity<PaginatedListResponse<List<ProductResponse>>> response =
+                productListController.listProducts(pageable);
+
+        // Assert
+        assertEquals(1, response.getBody().getPagination().getCurrentPage());
     }
 }
